--- a/demomvc/pom.xml
+++ b/demomvc/pom.xml
@@ -32,7 +32,7 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -45,9 +45,14 @@
 			<artifactId>camel-spring-boot-starter</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-restlet</artifactId>
+			<version>${camel.version}</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-netty4-http</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
@@ -104,7 +109,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${parent.version}</version>
+				<version>${project.parent.version}</version>
 				<configuration>
 					<mainClass>org.apache.camel.spring.boot.FatJarRouter</mainClass>
 				</configuration>
