--- a/service-fixerio/pom.xml
+++ b/service-fixerio/pom.xml
@@ -67,6 +67,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
 
     <build>
