renamed module directory to match artifact id

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ buildNumber.properties
 
 # JIRA plugin
 atlassian-ide-plugin.xml
+external.properties
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
