--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 jdk:
-  - oraclejdk8
+- oraclejdk8
 before_install:
-  openssl aes-256-cbc -K $encrypted_0a6446eb3ae3_key -iv $encrypted_0a6446eb3ae3_iv -in currency-service-fixerio/src/main/resources/external.properties.enc -out currency-service-fixerio/src/main/resources/external.properties -d
+- openssl aes-256-cbc -K $encrypted_a712b980925a_key -iv $encrypted_a712b980925a_iv
+  -in external.properties.enc -out external.properties -d
