once more with feeling

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ jdk:
 - oraclejdk8
 before_install:
 - openssl aes-256-cbc -K $encrypted_a712b980925a_key -iv $encrypted_a712b980925a_iv
-  -in external.properties.enc -out external.properties -d
+  -in currency-service-fixerio/src/main/resources/external.properties.enc -out currency-service-fixerio/src/main/resources/external.properties -d
