--- a/demomvc/pom.xml
+++ b/demomvc/pom.xml
@@ -27,8 +27,7 @@
 
 
 
-	<dependencyManagement>?
-	o .gitign
+	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
